# ChangeLog for net-analyzer/dnstracer
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/dnstracer/ChangeLog,v 1.21 2008/02/06 20:29:26 grobian Exp $

  06 Feb 2008; Fabian Groffen <grobian@gentoo.org> dnstracer-1.8.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  27 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> dnstracer-1.8.ebuild:
  amd64 stable.

  24 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> -dnstracer-1.7.ebuild:
  Removing old ebuild.

  05 Mar 2005; Markus Rothe <corsair@gentoo.org> dnstracer-1.8.ebuild:
  Stable on ppc64

  02 Feb 2005; Lina Pezzella <j4rg0n@gentoo.org> dnstracer-1.8.ebuild:
  Stable ppc-macos

  01 Jan 2005; Markus Rothe <corsair@gentoo.org> dnstracer-1.8.ebuild:
  Added ~ppc64 to KEYWORDS

  01 Jan 2005; Lina Pezzella <j4rg0n@gentoo.org> dnstracer-1.8.ebuild:
  Added to ~ppc-macos, bug #58249

  21 Nov 2004; Karol Wojtaszek <sekretarz@gentoo.org> dnstracer-1.8.ebuild:
  Added to ~amd64, bug #71962

  19 Nov 2004; Jason Wever <weeve@gentoo.org> dnstracer-1.8.ebuild:
  Stable on sparc.

*dnstracer-1.8 (09 Jul 2004)

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> +dnstracer-1.8.ebuild:
  Version bump. Closes #56475. Thanks to Daniel Webert <daniel_webert@web.de>.

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> dnstracer-1.6.ebuild,
  dnstracer-1.7.ebuild:
  Tidy up, added missing ipv6 to IUSE

  05 Jul 2004; Eldad Zack <eldad@gentoo.org> dnstracer-1.7.ebuild:
  Added IUSE ipv6, Closes #54192. Thanks to Jonathan Stewart <reaper@fudo.org>

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> dnstracer-1.6.ebuild,
  dnstracer-1.7.ebuild:
  change virtual/glibc to virtual/libc, add metadata.xml

  16 Apr 2004; Michael McCabe <randy@gentoo.org> dnstracer-1.7.ebuild:
  adding s390 keywords
