@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST tcpreplay-2.3.5.tar.gz 682045 RMD160 f94e35bbe96e95416bbc320cb853fe889f2b630d SHA1 161eb4ac7985d3026f068eda93314f988eff05c7 SHA256 8582d169b8c56b7eb1bea2cf58ccc5e686d327a7039cca5a7b8279d26bc71fdc
 DIST tcpreplay-3.2.3.tar.gz 776918 RMD160 2b6c3cdd4758ba54086e84753f2a921fce1061fa SHA1 bafca8248bcbdc9fbbda1ddfa5410ab024723d0d SHA256 5e4a5dabf98cc75cfd3e719018de4a111d81f55eb582ab1c865a26930977db74
+DIST tcpreplay-3.3.2.tar.gz 855896 RMD160 a42d75f54d2203f91f413ab7191554eb761fd06f SHA1 270912f9f58abed741c65e8ea16fdf421603ea11 SHA256 b20dbc127668a3c02bf12c86fb511ad23f5483f4c5e3b8ab3f4df4af449c3076
 EBUILD tcpreplay-2.3.5.ebuild 1167 RMD160 ad08de2562978e0146fe2b4b9c2e6e9d122d293c SHA1 5368bcf03943756ddefbe201b2e25a0a0a697853 SHA256 2fc8cc645ed42663720048e65fab749af6e28f151c25ee78350b525a993672fa
 EBUILD tcpreplay-3.2.3.ebuild 1202 RMD160 2483c5b1aa21e05bcc45a88e660e41fcfedd882b SHA1 cb82eb94092f481773bf0ed489a765292047b7c5 SHA256 6f1346954b5ef430fa60cbf163a51dcdbc36488e7a5cc0634f58404eaa03bb8d
-MISC ChangeLog 4272 RMD160 79c24ff3ea8bd00cb33ea415a1d8105504c65c31 SHA1 64b72579350f6406cfa77a7b9d473f81fad4658a SHA256 2245d06463c52d72613b19dd3db72fec9324cca9a6a8b8aa2c7c65834d10a4d0
+EBUILD tcpreplay-3.3.2.ebuild 1206 RMD160 391755e7ba981817be577836c51f5289b536a167 SHA1 a1c1a1e0181bd91ac2be529a47c420599a756436 SHA256 9dccd2cbd3356f569afa088e1bbbf09aa292be65c77e67f24c460631119bc733
+MISC ChangeLog 4412 RMD160 44d9c0e5afa85d4c65a2728e16c2c1c2040af6c6 SHA1 429774fff1ef1c2ab02ed279daa5e5099c8e6baa SHA256 7b2b7195e7bd420034195ce3dcf16753f17e8a14cbeab67a808445f19165f71c
 MISC metadata.xml 250 RMD160 b25b7c0d87b753feb76b6628b4facc197baffc05 SHA1 95cff9718e31aea03e554bdafe0f468e2f46ae41 SHA256 54665bdee6cbcbfdd605c2d53212c530599cb523867ddf5cebbaa6d05dce4fc9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhyj3kACgkQz974XjDVpblkxQCeNsHv6IpE3vFlU952wcBGFX+B
+vjsAoJPXYAo+VunVUn6M6yDriISdZE6I
+=valg
+-----END PGP SIGNATURE-----
