@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/dnstracer
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/dnstracer/ChangeLog,v 1.21 2008/02/06 20:29:26 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/dnstracer/ChangeLog,v 1.22 2008/07/07 21:45:04 jokey Exp $
+
+*dnstracer-1.9 (07 Jul 2008)
+
+  07 Jul 2008; Markus Ullmann <jokey@gentoo.org> +dnstracer-1.9.ebuild:
+  Version bump for bug #229253
 
   06 Feb 2008; Fabian Groffen <grobian@gentoo.org> dnstracer-1.8.ebuild:
   Dropped ppc-macos keyword, see you in prefix
